--- a/SocketTest/project.json
+++ b/SocketTest/project.json
@@ -12,14 +12,14 @@
     "frameworks": {
         "dnxcore50": {
             "dependencies": {
-                "Microsoft.CSharp": "4.0.1-beta-23326",
-                "System.Net.Security": "4.0.0-beta-23326",
-                "System.Net.Primitives": "4.0.11-beta-23326",
-                "System.Net.Sockets": "4.1.0-beta-23326",
-                "System.Collections": "4.0.11-beta-23326",
-                "System.Console": "4.0.0-beta-23326",
-                "System.Linq": "4.0.1-beta-23326",
-                "System.Threading": "4.0.11-beta-23326"
+                "Microsoft.CSharp": "4.0.1-beta-*",
+                "System.Net.Security": "4.0.0-beta-*",
+                "System.Net.Primitives": "4.0.11-beta-*",
+                "System.Net.Sockets": "4.1.0-beta-*",
+                "System.Collections": "4.0.11-beta-*",
+                "System.Console": "4.0.0-beta-*",
+                "System.Linq": "4.0.1-beta-*",
+                "System.Threading": "4.0.11-beta-*"
             }
         }
     }
