--- a/SocketTest/project.json
+++ b/SocketTest/project.json
@@ -16,6 +16,7 @@
                 "System.Net.Security": "4.0.0-beta-*",
                 "System.Net.Primitives": "4.0.11-beta-*",
                 "System.Net.Sockets": "4.1.0-beta-*",
+                "System.Net.NameResolution": "4.0.0-beta-*",
                 "System.Collections": "4.0.11-beta-*",
                 "System.Console": "4.0.0-beta-*",
                 "System.Linq": "4.0.1-beta-*",
